--- a/simulation_low.ipynb
+++ b/simulation_low.ipynb
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "170965ab",
+   "id": "6aac2c2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "7f4a9502",
+   "id": "9ab2a894",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,23 +170,23 @@
     "# fit a sixth order polynomial\n",
     "poly = PolynomialFeatures(8)\n",
     "\n",
-    "# 转换特征\n",
+    "# Conversion feature\n",
     "X_poly = poly.fit_transform(D_train[['x', 'z']])\n",
     "\n",
-    "# 训练多项式回归模型\n",
+    "# Train polynomial regression models\n",
     "reg = LinearRegression().fit(X_poly, D_train['y'])\n",
     "    \n",
-    "# 首先，将新数据（在这个例子中是 D_train 的特征 'x' 和 'z'）转换为多项式特征\n",
+    "# First, convert the new data (in this case the D_train features 'x' and 'z') into polynomial features\n",
     "X_poly_new = poly.transform(D_train[['x', 'z']])\n",
     "\n",
-    "# 使用训练好的模型进行预测\n",
+    "# Use trained models to make predictions\n",
     "y_pred = reg.predict(X_poly_new)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "d5caf88b",
+   "id": "63285c90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "d1811068",
+   "id": "a4006f8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "08c2e760",
+   "id": "5040062c",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "64804820",
+   "id": "8818414f",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "6fc3a12d",
+   "id": "fdf2c2d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 271,
-   "id": "10cf50ed",
+   "id": "4c777560",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "8d8a6c41",
+   "id": "127459b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 270,
-   "id": "2257de99",
+   "id": "5050b148",
    "metadata": {},
    "outputs": [
     {
