--- a/Simulation Studies/simulation_high_2.ipynb
+++ b/Simulation Studies/simulation_high_2.ipynb
@@ -11971,9 +11971,9 @@
    ],
    "source": [
     "plt.figure(figsize=(5,5)) \n",
-    "plt.plot(N_values[0:7], results[\"max_welfare\"][0:7], label=\"Max Welfare\", linewidth=2)  # 加粗线条\n",
-    "plt.plot(N_values[0:7], results[\"payment\"][0:7], label=\"COAD\", linewidth=2)  # 加粗线条\n",
-    "plt.plot(N_values[0:7], results[\"sb_value\"][0:7], label=\"2nd-Price Auction\", linewidth=2)  # 加粗线条\n",
+    "plt.plot(N_values[0:7], results[\"max_welfare\"][0:7], label=\"Max Welfare\", linewidth=2)  \n",
+    "plt.plot(N_values[0:7], results[\"payment\"][0:7], label=\"COAD\", linewidth=2)  \n",
+    "plt.plot(N_values[0:7], results[\"sb_value\"][0:7], label=\"2nd-Price Auction\", linewidth=2) \n",
     "plt.xlabel(\"Number of Data\", fontsize=25)\n",
     "plt.ylabel(\"Expected Revenue\", fontsize=25)\n",
     "plt.legend(fontsize=20)\n",
